--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Jornada Viagens</title>
   </head>
   <body>
-    
+    <header>
+      <a href="#"><img src="img/bussola1.png" alt="Bússola do logo da Jornada Viagens na cor preta"></a>
+      <img src="img/menu.png" alt="menu de navegação">
+      <nav>
+        <ul>
+          <li><a href="blog.html" target="_blank" title="Acessar Blog">Blog</a></li>
+          <li><a href="pacotes.html" target="_blank" title="Acessar Pacotes de viagem">Pacotes de viagem</a></li>
+          <li><a href="contato.html" target="_blank" title="Acessar Contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
