--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#"
+      <a class="logo" href="index.html" title="Ir para a página inicial"
         ><img
           src="img/bussola1.png"
           alt="Bússola do logo da Jornada Viagens na cor preta"
