--- a/index.html
+++ b/index.html
@@ -13,27 +13,29 @@
           src="img/bussola1.png"
           alt="Bússola do logo da Jornada Viagens na cor preta"
       /></a>
-      <img src="img/menu.png" alt="menu de navegação" />
-      <nav>
-        <ul>
-          <li>
-            <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
-          </li>
-          <li>
-            <a
-              href="pacotes.html"
-              target="_blank"
-              title="Acessar Pacotes de viagem"
-              >Pacotes de viagem</a
-            >
-          </li>
-          <li>
-            <a href="contato.html" target="_blank" title="Acessar Contato"
-              >Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <div class="navegacao__menu">
+        <img src="img/menu.png" alt="menu de navegação" />
+        <nav>
+          <ul>
+            <li>
+              <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
+            </li>
+            <li>
+              <a
+                href="pacotes.html"
+                target="_blank"
+                title="Acessar Pacotes de viagem"
+                >Pacotes de viagem</a
+              >
+            </li>
+            <li>
+              <a href="contato.html" target="_blank" title="Acessar Contato"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
   </body>
 </html>
