Adiciona funcionalidade de mostrar e esconder o menu hamburguer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
           alt="Bússola do logo da Jornada Viagens na cor preta"
       /></a>
       <div class="navegacao__menu">
-        <img src="img/menu.png" alt="menu de navegação" />
+        <label for="menu">
+          <img src="img/menu.png" alt="menu de navegação" />
+        </label>
+        <input type="checkbox" id="menu" hidden />
         <nav>
           <ul>
             <li>
