Finaliza estilizacao do header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <header>
       <a class="logo" href="index.html" title="Ir para a página inicial"
         ><img
+          class="img__mobile"
           src="img/bussola1.png"
-          alt="Bússola do logo da Jornada Viagens na cor preta"
+          alt="Bússola do logo da Jornada Viagens na cor preta" />
+        <img
+          class="img__desktop"
+          src="img/logo1.png"
+          alt="Logo da Jornada Viagens na cor preta"
       /></a>
       <div class="navegacao__menu">
         <label for="menu">
