--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <section class="hero">
-      <img src="img/banner_hero_mobile.jpg" alt="" />
+      <div class="hero__img"></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
         à seleção das atividades, cuidamos de todos os detalhes para que você
