Adiciona e ajusta o layout da sessao categorias

--- a/index.html
+++ b/index.html
@@ -102,6 +102,62 @@
         <h2>Busque por Categoria</h2>
         <hr />
       </div>
+      <div class="categories__cards">
+        <a
+          class="card single_line"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Pacotes Nacionais"
+        >
+          <img
+            src="img/icone_pessoa.png"
+            alt="Icone cinza representando uma pessoa fazendo tracking"
+          />
+          <h3>
+            Pacotes <br />
+            Nacionais
+          </h3>
+        </a>
+        <a
+          class="card single_line"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Pacotes Insternacionais"
+        >
+          <img
+            src="img/icone_aviao.png"
+            alt="Icone cinza representando um avião de papel, simbolizando viagens"
+          />
+          <h3>
+            Pacotes <br />
+            Internacionais
+          </h3>
+        </a>
+        <a
+          class="card single_line transfer"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Transfer"
+        >
+          <img
+            src="img/icone_van.png"
+            alt="Icone cinza representando uma van, simbolizando translados"
+          />
+          <h3>Transfer</h3>
+        </a>
+        <a
+          class="card single_line"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Seguro Viagem"
+        >
+          <img
+            src="img/icone_seguro.png"
+            alt="Icone cinza representando um seguro de viagem"
+          />
+          <h3>Seguro Viagem</h3>
+        </a>
+      </div>
     </section>
   </body>
 </html>
