--- a/index.html
+++ b/index.html
@@ -159,5 +159,41 @@
         </a>
       </div>
     </section>
+    <section class="destines">
+      <div class="section__title">
+        <h2>Destinos Populares</h2>
+        <hr />
+      </div>
+      <div class="destines__itens">
+        <article class="item">
+          <header>
+            <div class="img__item"></div>
+            <h4>Tokyo</h4>
+            <p>
+              Tóquio é uma cidade vibrante e cosmopolita, com seus templos
+              históricos, museus de arte moderna e arranha-céus icônicos. Não
+              perca a chance de mergulhar em sua atmosfera fascinante.
+            </p>
+            <footer>
+              <a href="#" class="card__button">Ver detalhes</a>
+            </footer>
+          </header>
+        </article>
+        <article class="item">
+          <header>
+            <div class="img__item"></div>
+            <h4>Osaka</h4>
+            <p>
+              Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
+              por sua gastronomia deliciosa e por ser um excelente ponto de
+              partida para explorar outras cidades japonesas próximas.
+            </p>
+            <footer>
+              <a href="#" class="card__button">Ver detalhes</a>
+            </footer>
+          </header>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
