--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jornada Viagens</title>
   </head>
   <body>
-    <header>
+    <header class="main__header">
       <a class="logo" href="index.html" title="Ir para a página inicial"
         ><img
           class="img__mobile"
@@ -165,7 +165,7 @@
         <hr />
       </div>
       <div class="destines__itens">
-        <article class="item">
+        <article class="item tokyo">
           <header>
             <div class="img__item"></div>
             <h4>Tokyo</h4>
@@ -175,11 +175,11 @@
               perca a chance de mergulhar em sua atmosfera fascinante.
             </p>
             <footer>
-              <a href="#" class="card__button">Ver detalhes</a>
+              <a href="#" class="card__button" target="_blank" >Ver detalhes</a>
             </footer>
           </header>
         </article>
-        <article class="item">
+        <article class="item osaka">
           <header>
             <div class="img__item"></div>
             <h4>Osaka</h4>
