--- a/index.html
+++ b/index.html
@@ -175,7 +175,13 @@
               perca a chance de mergulhar em sua atmosfera fascinante.
             </p>
             <footer>
-              <a href="#" class="card__button" target="_blank" >Ver detalhes</a>
+              <a
+                href="#"
+                class="card__button"
+                target="_blank"
+                title="Veja mais detalhes do destino Tokyo"
+                >Ver detalhes</a
+              >
             </footer>
           </header>
         </article>
@@ -189,7 +195,13 @@
               partida para explorar outras cidades japonesas próximas.
             </p>
             <footer>
-              <a href="#" class="card__button">Ver detalhes</a>
+              <a
+                href="#"
+                class="card__button"
+                target="_blank"
+                title="Veja mais detalhes do destino Osaka"
+                >Ver detalhes</a
+              >
             </footer>
           </header>
         </article>
