Inicia a sessao condicoes de pagamento

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
             <div class="img__item"></div>
             <h4>Osaka</h4>
             <p>
-              Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
-              por sua gastronomia deliciosa e por ser um excelente ponto de
-              partida para explorar outras cidades japonesas próximas.
+              Osaka é uma cidade agitada e moderna no Japãos. Famosa por sua
+              gastronomia deliciosa e por ser um excelente ponto de partida para
+              explorar outras cidades japonesas próximas.
             </p>
             <footer>
               <a
